--- a/beneficio-neto-girona.html
+++ b/beneficio-neto-girona.html
@@ -301,10 +301,10 @@
             </div>
 
             <div class="form-group">
-                <label>💼 Comisión inmobiliaria (%)</label>
+                <label>💼 Honorarios inmobiliaria (%)</label>
                 <div class="slider-value" id="comisionValue">3 %</div>
                 <input type="range" id="comision" min="0" max="10" step="0.5" value="3" oninput="updateValue('comision', this.value, ' %')">
-                <p class="campo-explicacion">Porcentaje que cobra la inmobiliaria sobre el precio de venta.</p>
+                <p class="campo-explicacion">Porcentaje para la inmobiliaria por gestionar todo el proceso la venta, trámites, burocracia, visitas, negociación, optimización fiscal, etc... Normalmente entre 4% y 6%.</p>
             </div>
 
             <div class="form-group">
